# fastapi-gpt-api

./: .env.sample  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
app/: main.py  pyproject.toml  settings.py  version.py
app/database/: connection.py
app/enums/: collections.py
app/routers/: chatgpt.py
app/services/: chat_gpt_integration.py
