[tool.poetry]
name = "FastApi GPT API"
version = "0.1.0"
description = ""
authors = ["marlonmartins2 <marlon.azevedo.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
pymongo = "^4.7.3"
openai = "^1.34.0"
python-dotenv = "^1.0.1"
fastapi-pagination = "^0.12.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
